; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/net/extr_netiucv.c_netiucv_callback_rx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/net/extr_netiucv.c_netiucv_callback_rx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iucv_path = type { %struct.iucv_connection* }
%struct.iucv_connection = type { i32 }
%struct.iucv_message = type { i32 }
%struct.iucv_event = type { %struct.iucv_message*, %struct.iucv_connection* }

@CONN_EVENT_RX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iucv_path*, %struct.iucv_message*)* @netiucv_callback_rx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @netiucv_callback_rx(%struct.iucv_path* %0, %struct.iucv_message* %1) #0 {
  %3 = alloca %struct.iucv_path*, align 8
  %4 = alloca %struct.iucv_message*, align 8
  %5 = alloca %struct.iucv_connection*, align 8
  %6 = alloca %struct.iucv_event, align 8
  store %struct.iucv_path* %0, %struct.iucv_path** %3, align 8
  store %struct.iucv_message* %1, %struct.iucv_message** %4, align 8
  %7 = load %struct.iucv_path*, %struct.iucv_path** %3, align 8
  %8 = getelementptr inbounds %struct.iucv_path, %struct.iucv_path* %7, i32 0, i32 0
  %9 = load %struct.iucv_connection*, %struct.iucv_connection** %8, align 8
  store %struct.iucv_connection* %9, %struct.iucv_connection** %5, align 8
  %10 = load %struct.iucv_connection*, %struct.iucv_connection** %5, align 8
  %11 = getelementptr inbounds %struct.iucv_event, %struct.iucv_event* %6, i32 0, i32 1
  store %struct.iucv_connection* %10, %struct.iucv_connection** %11, align 8
  %12 = load %struct.iucv_message*, %struct.iucv_message** %4, align 8
  %13 = getelementptr inbounds %struct.iucv_event, %struct.iucv_event* %6, i32 0, i32 0
  store %struct.iucv_message* %12, %struct.iucv_message** %13, align 8
  %14 = load %struct.iucv_connection*, %struct.iucv_connection** %5, align 8
  %15 = getelementptr inbounds %struct.iucv_connection, %struct.iucv_connection* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @CONN_EVENT_RX, align 4
  %18 = call i32 @fsm_event(i32 %16, i32 %17, %struct.iucv_event* %6)
  ret void
}

declare dso_local i32 @fsm_event(i32, i32, %struct.iucv_event*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
